--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
